crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_search.snap
---
source: crates/harness-monitor/src/tui_tests.rs
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 Harness Monitor   repo:routa-js  branch:main  agents:2 active:1  dirty:1  unknown:1  synced 2m ago
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 1 file, 5 commits, branch: main, 2 worktrees                                       ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> route.ts                                      card/            D  -12        5m   ││+use new                        │
│                                                                                    ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌Details─────────────────────────┐
│                                                                                    ││route.ts                        │
│                                                                                    ││src/app/api/a2a/card            │
└────────────────────────────────────────────────────────────────────────────────────┘│Lines: ...  Size: ...  Git      │
┌Fitness (Entrix Fast)───────────────────────────────────────────────────────────────┐│changes: ...                    │
│Health Run: idle (press g refresh, m switch mode)                                   ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
