crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_summary.snap
---
source: crates/harness-monitor/src/tui_tests.rs
expression: "render_snapshot(&state, &mut cache, 120, 28)"
---
 Harness Monitor   repo:routa-js  branch:main  agents:2 active:1  dirty:2  unknown:1  synced 2m ago
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ 2 files, 5 commits, branch: main, 2 worktrees                                      ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> tui.rs                                        src/             M  +38 -5     4m   ││+use new                        │
│  route.ts                                      card/            D  -12        5m   ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌Details─────────────────────────┐
│                                                                                    ││tui.rs                          │
│                                                                                    ││crates/harness-monitor/src      │
│                                                                                    ││Lines: ...  Size: ...  Git      │
└────────────────────────────────────────────────────────────────────────────────────┘│changes: ...                    │
┌Fitness (Entrix Fast)───────────────────────────────────────────────────────────────┐│                                │
│Health Run: idle (press g refresh, m switch mode)                                   ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
